Fixing pagnation z-index

--- a/assets/stylus/components/pagination.styl
+++ b/assets/stylus/components/pagination.styl
@@ -24,12 +24,14 @@
   position absolute
   left 0
   top 0
+  z-index 1
   color $textColour
 
 .pagination__older-posts
   position absolute
   right 0
   top 0
+  z-index 1
   color $textColour
 
 @media (max-width: 400px)
